Fixed issue with border right not showing on hover

--- a/playbook/app/pb_kits/playbook/pb_form_group/_form_group.scss
+++ b/playbook/app/pb_kits/playbook/pb_form_group/_form_group.scss
@@ -94,6 +94,11 @@
     border-top-right-radius: 0;
     border-right-color: transparent;
   }
+  & > [class^=pb_selectable_card_kit] input[type="checkbox"]:not(:checked) ~ label, [class^=pb_selectable_card_kit] input[type="radio"]:not(:checked) ~ label {
+    &:hover {
+      border-right-color: $slate;
+    } 
+  }
 
   & > [class^=pb_selectable_card_kit]:not(:first-child) label {
     border-bottom-left-radius: 0;
@@ -113,6 +118,9 @@
   & > [class^=pb_selectable_card_icon_kit]:not(:last-child) {
     [class^=pb_selectable_card_kit] input[type="checkbox"]:not(:checked) ~ label, [class^=pb_selectable_card_kit] input[type="radio"]:not(:checked)~ label {
       border-right-color: transparent;
+      &:hover {
+        border-right-color: $slate;
+      }
     }
   }
 
